Closed Bug 1301189 Opened 9 years ago Closed 9 years ago

Unmark gray assertion failure in nsJSUtils::ModuleEvaluation

Categories

(Core :: DOM: Core & HTML, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla51
Tracking Status
firefox50 --- fixed
firefox51 --- fixed

People

(Reporter: mccr8, Assigned: mccr8)

References

Details

Attachments

(1 file)

The patch in bug 1110928 triggers a black-gray invariant assertion failure, only on Android 4.3 API15+ debug. I assume this is some quirk that it always fails there. The stack looks like this: js::CompartmentChecker::check [jscntxtinlines.h:5001e8f1da97 : 71 + 0x2] JS::ModuleEvaluation [jscntxtinlines.h:5001e8f1da97 : 83 + 0x3] nsJSUtils::ModuleEvaluation [nsJSUtils.cpp:5001e8f1da97 : 329 + 0x7] nsScriptLoader::EvaluateScript [nsScriptLoader.cpp:5001e8f1da97 : 2151 + 0x5] nsScriptLoader::ProcessRequest [nsScriptLoader.cpp:5001e8f1da97 : 1953 + 0x7] https://treeherder.mozilla.org/#/jobs?repo=try&revision=5001e8f1da97&selectedJob=27105527
I think the getters on nsModuleScript should simply do the expose.
Assignee: nobody → continuation
> I think the getters on nsModuleScript should simply do the expose. Yes, that is correct. They should.
That fixed my issue: https://treeherder.mozilla.org/#/jobs?repo=try&revision=306f6996c495 I suppose I should do a real try run, too.
Comment on attachment 8789881 [details] Bug 1301189 - Use ExposeObjectToActiveJS in nsModuleScript. https://reviewboard.mozilla.org/r/77934/#review76366
Attachment #8789881 - Flags: review?(bugs) → review+
Pushed by amccreight@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/dbeaca20e104 Use ExposeObjectToActiveJS in nsModuleScript. r=smaug
Status: NEW → RESOLVED
Closed: 9 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla51
Blocks: 1296848
Comment on attachment 8789881 [details] Bug 1301189 - Use ExposeObjectToActiveJS in nsModuleScript. Approval Request Comment [Feature/regressing bug #]: bug 1240072 [User impact if declined]: possible crashes [Describe test coverage new/current, TreeHerder]: I think this code has tests [Risks and why]: low [String/UUID change made/needed]: none
Attachment #8789881 - Flags: approval-mozilla-aurora?
Comment on attachment 8789881 [details] Bug 1301189 - Use ExposeObjectToActiveJS in nsModuleScript. Crash fix, has been on Nightly for a week, Aurora50+
Attachment #8789881 - Flags: approval-mozilla-aurora? → approval-mozilla-aurora+
Component: DOM → DOM: Core & HTML
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: