Bug 1301189 - Use ExposeObjectToActiveJS in nsModuleScript. r=smaug

These GC things can be passed to the JS engine, so we should make sure
they are not marked gray.

MozReview-Commit-ID: GJDogXSuqYh

--HG--
extra : rebase_source : a9231a81c2791f1da6918595e2d6329f7ba14e79